--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <body>
 <h1>GitHub Page</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<!--next line has target="_blank" to have a download window-->
+<p><a href="https://angzuril.github.io/BallFort.zip" target="_blank">BallFort Game (zip)</a></p>
 </body>
 </html>
