--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Angzuril's Project Page</h1>
-<p>A place for me to demo any projects I've worked on. Hosted with GitHub Pages, mostly because its free.</p>
-<h2>BallFort (C#)</h2>
-<h3>About</h3>
-<p>BallFort is a simple game I developed in C# using the Unity engine. It supports split-screen play for local multiplayer with up to 4 players. The goal is simply to knock other players off the structure. Once the executable/web player is running, press space on the keyboard, or A on most controllers to join. Once all players have joined, click the "Launch Game" button (you can do this with only 1 player).</p>
-<h3>Controls</h3>
-<h4>Keyboard and Mouse</h4>
-<p>WASD or Arrow Keys to move, mouse to look, Space to jump. Left click is used to hit other players, if there are any. If you are not using the Web Player, press Escape to exit.</p>
-<h4>Controller</h4>
-<p>Left joystick for movement, right joystick for looking around. A to Jump, Right trigger to attack.a</p>
-<h3>Links</h3>
-<p><a href = "https://angzuril.github.io/BallFortWebPlayer/">BallFort Game (Web Player)</a></p>
-<!--next line has target="_blank" to have a download window-->
-<p><a href="https://angzuril.github.io/BallFort.zip" target="_blank">BallFort Game Download(zip)</a></p>
+<h1>Jason Morawski</h1>
+<p>A place for me to demo my projects and publications. Hosted with GitHub Pages, mostly because its free.</p>
+<h2>About Me</h2>
+<p>I've always had an interest in problem solving, coupled with a competitive nature. Growing up this drew me to tabletop or virtual strategy games. These factors led me to enroll in Engineering, and become a Computer Engineer. I enjoy developing software on my own time, often to enhance or analyze a game that I'm playing.
+<br><br>
+I worked hard to earn my Master's Degree focused in Software Engineering and Intelligent Systems from the University of Alberta. My research was based around Recommender Systems, for which I integrated Machine Learning. I have published works in the International Journal of Intelligent Systems, and IEEE Transactions on Computational Social Systems.</p>
+
+<p><a href = "https://angzuril.github.io/Projects/">Projects</a></p>
+<h2>External Links</h2>
+<h3>Publications</h3>
+<p><a href = "http://onlinelibrary.wiley.com/doi/10.1002/int.21884/full"><b>A Fuzzy Recommender System for Public Library Catalogs</b> in International Journal of Intelligent Systems</a></p>
+<p><a href = "http://ieeexplore.ieee.org/abstract/document/7803653/"><b>Incorporating Spatial, Temporal, and Social Context in Recommendations for Location-Based Social Networks</b> in IEEE Transactions on Computational Social Systems</a></p>
+<h3>Social Media</h3>
+<p><a href = "https://www.linkedin.com/in/jason-morawski-63a19341/">LinkedIn</a></p>
 </body>
 </html>
